MB.DVX.AppOfApps.PlataformaM_Mais/cluster-setup/istio-manifest.yaml
# curl -L https://istio.io/downloadIstio | sh -
# cd istio-1.23.2
# kubectl create ns istio-system
# istioctl operator init

# kubectl create -n istio-system secret tls istio-ingressgateway-certs \
#   --key plataformammais-sandbox.n-mercantil.com.br.key \
#   --cert  plataformammais-sandbox.n-mercantil.com.br.crt
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # Seleciona o Istio ingress-gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingressgateway-certs # Nome do secret criado    
    hosts:
    - "*"
