MB.DVX.AppOfApps.PlataformaM_Mais/cluster-setup/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: layer
                operator: In
                values:
                - apps
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: nginx-gateway
#   namespace: default
# spec:
#   selector:
#     istio: ingressgateway  # Seleciona o Ingress Gateway do Istio
#   servers:
#     - port:
#         number: 80
#         name: http
#         protocol: HTTP
#       hosts:
#         - "nginx.plataformammais-sandbox.n-mercantil.com.br"  # Atualize com seu domínio ou use "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  namespace: default
spec:
  hosts:
    - "nginx.plataformammais-sandbox.n-mercantil.com.br"  # O mesmo domínio configurado no Gateway
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: "/"  # Roteia todo o tráfego para o NGINX
      route:
        - destination:
            host: nginx-service  # O nome do Service do NGINX
            port:
              number: 80
